--- a/page_action.html
+++ b/page_action.html
@@ -5,6 +5,14 @@
     <script src="js/page_action.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
 
+    <style media="screen">
+        .experimental .btn {
+            width: 35px;
+            height: 35px;
+            color: #FFF;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -12,14 +20,12 @@
         <p>No&nbsp;AppId&nbsp;Found.</p>
     </div>
     <hr>
-    <div class="">
-        <button tabindex="-1" id="collapse" style="color: #FFF;" name="collapse" class="btn btn-default">&#x21e4;</button>
-        <button tabindex="-1" id="expand" style="color: #FFF;" name="expand" class="btn btn-default">&#x21e5;</button>
-        <button tabindex="-1" id="zoom" style="color: #FFF;" name="zoom" class="btn btn-default">&#x2194;
-</button>
-        <button tabindex="-1" id="zoom_out" style="color: #FFF;" name="zoom_out" class="btn btn-default">&#x2194;
-</button>
-        <button tabindex="-1" id="autofill" style="color: #FFF;" name="autofill" class="btn btn-default">Autofill Form</button>
+    <div class="experimental">
+        <button tabindex="-1" id="collapse" name="collapse" class="btn btn-default">&#x21e4;</button>
+        <button tabindex="-1" id="expand" name="expand" class="btn btn-default">&#x21e5;</button>
+        <button tabindex="-1" id="zoom" name="zoom" class="btn btn-default">&#x2194;</button>
+        <button tabindex="-1" id="zoom_out" name="zoom_out" class="btn btn-default">&#x2194;</button>
+        <button style="width: calc(100% - 155px)" tabindex="-1" id="autofill" name="autofill" class="btn btn-default">Autofill Form</button>
     </div>
 
     <textarea id="sandbox" style="display: none"></textarea>
