Error console, dev scripts reload

--- a/options.html
+++ b/options.html
@@ -5,7 +5,13 @@
 
     <div class="">
         <label for="refresh_interval">Node Refresh Interval</label>
-        <input id="refresh-interval" type="text" name="refresh_interval" value="" placeholder="In Miliseconds">
+        <input id="refresh-interval" type="text" name="refresh_interval" value="" placeholder="In Miliseconds"><br><br>
+        <label for="connectTo">Connect To</label>
+        <input id="connectTo" type="text" name="connectTo" value="" placeholder="IP of dev server">
+        <label for="user-id">User ID</label>
+        <input id="user-id" type="text" name="user_id" value="" placeholder="User ID"><br><br>
+        <label for="passphrase">Passphrase</label>
+        <input id="passphrase" type="text" name="passphrase" value="" placeholder="Passphrase">
     </div>
 
     <div id="status"></div>
